--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -31,6 +31,7 @@ homepageImage = "gm_construct_ballz.jpg"
 
 [article]
 showDate = true
+showComments = true
 showViews = false
 showLikes = false
 showDateUpdated = true
