--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -27,7 +27,7 @@ defaultContentLanguage = "en"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
-enableRobotsTXT = false
+enableRobotsTXT = true
 paginate = 10
 summaryLength = 0
 
