--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -31,7 +31,7 @@ enableRobotsTXT = true
 paginate = 10
 summaryLength = 0
 
-timeout = "360s"
+timeout = 30000
 
 buildDrafts = false
 buildFuture = false
