switch to umami

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -96,6 +96,12 @@ cardViewScreenWidth = false
 
 [fathomAnalytics]
 
+[umamiAnalytics]
+  websiteid = "03a18d89-9829-4a99-af23-833657902d3d"
+  domain = "t.asterisk.lol"
+
+
+
 [buymeacoffee]
 
 [verification]
