--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -107,7 +107,7 @@ cardViewScreenWidth = false
 [umamiAnalytics]
   websiteid = "03a18d89-9829-4a99-af23-833657902d3d"
   domain = "t.asterisk.lol"
-
+  dataDomains = "asterisk.lol"
 
 
 [buymeacoffee]
