--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -24,5 +24,5 @@ links = [
     { ellipsis-vertical = "/socials" },
 ]
 image = "asterisk_ext.png"
-headline = "Canadian Linux Nerd"
-bio = "Canadian Linux nerd and game enthusiast"
+headline = "Canadian Linux nerd"
+bio = "Canadian Linux nerd"
