--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -23,6 +23,13 @@ identifier = "aUjvRJdn7W"
 weight = 9996
 
 [[main]]
+pre = "screwdriver-wrench"
+name = "Uses"
+pageRef = "uses"
+identifier = "dbgedgewyudwdwtfyu"
+weight = 9995
+
+[[main]]
 pre = "comment-dots"
 name = "Socials"
 pageRef = "socials"
