--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,7 +15,7 @@ enableEmoji = true
     disable = true
   [privacy.instagram]
     disable = true
-  [privacy.twitter]
+  [privacy.x]
     disable = true
   [privacy.vimeo]
     disable = true
