use proper icons & signal icon is bundled now

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,9 +15,9 @@ logo = "./assets/favicon-32x32.png"
 name = "Asterisk"
 links = [
     { github = "https://github.com/Ast3risk-ops" },
-    { mastodon = "https://social.linux.pizza/@asterisk" },
+    { fediverse = "https://social.linux.pizza/@asterisk" },
     { discord = "https://discord.com/users/789561823863111742" },
-    { element = "https://matrix.to/#/@ast3risk:matrix.org/" },
+    { matrix = "https://matrix.to/#/@ast3risk:matrix.org/" },
     { signal = "/socials#messengers" },
     { steam = "https://steamcommunity.com/id/ast3riskinc" },
     { envelope = "mailto:me@asterisk.lol" },
